# dida-clone

./: .gitignore  .prettierignore  AGENTS.md  README.md  UI_UX_OPTIMIZATION_PLAN.md  eslint.config.js  index.html  latest.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts  改进文档.md  架构与性能优化技术方案_最终版.md  滴答清单功能对比分析.md  项目开发规范.md  项目架构优化方案.md
docs/: auto-updater-implementation-plan.md  calendar-task-view-optimization-plan.md  dida_clone_optimization_20260628.md  dida_clone_phase10_20260630.md  dida_clone_phase10_验收报告_20260630.md  dida_clone_phase11_20260630.md  dida_clone_phase12_20260630.md  dida_clone_phase2_20260628.md  dida_clone_phase3_20260629.md  dida_clone_phase4_20260629.md  dida_clone_phase5_20260629.md  dida_clone_phase6_20260629.md  dida_clone_phase7_20260629.md  dida_clone_phase8_20260630.md  dida_clone_phase8_phase9_验收报告_20260630.md  (+15 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  fonts.rs  lib.rs  llm.rs  main.rs  reminder.rs  repeat.rs  sync.rs  sync_ops.rs  webdav_sync.rs
src-tauri/src/commands/: ai_batch.rs  attachment_commands.rs  data_commands.rs  data_export.rs  data_export_csv.rs  data_export_json.rs  data_export_markdown.rs  data_import.rs  file_commands.rs  goal_commands.rs  habit_commands.rs  list_commands.rs  repeat_commands.rs  report_commands.rs  secret_commands.rs  snapshot_commands.rs  sync_commands.rs  sync_log_commands.rs  tag_commands.rs  task_commands.rs  task_create.rs  task_crud.rs  task_ops.rs  task_query.rs  task_update.rs  template_commands.rs  time_tracking_commands.rs  webdav_commands.rs  window_commands.rs
(+337 files in other folders)
