[package]
name = "dida-clone"
version = "1.8.0"
description = "滴答清单本地复刻"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
