[package]
name = "dida-clone"
version = "1.33.0"
description = "滴答清单本地复刻"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
font-loader = "0.11"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
git2 = "0.19"
tokio = { version = "1", features = ["time", "fs"] }
open = "5"
quick-xml = "0.36"
